# pomodoro_timer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  nginx_server.conf  package-lock.json  package.json  pomodoro.html
.github/: CODEOWNERS
README/: db_schema.dbml
backend/: .dockerignore  Dockerfile  Makefile  README.md  db_schema.dbml  pyproject.toml
backend/pomodoro_server/: Makefile  manage.py  selftest-cert.crt  selftest-cert.key
backend/pomodoro_server/pomo/: admin.py  helper_cryptography.py  models.py  urls.py  validation.py  views.py
backend/pomodoro_server/pomodoro_server/: asgi.py  settings.py  urls.py
backend/pomodoro_server/tests/: .env_dev  test_api.py
backend/scripts/: create_superuser.sh  entrypoint.sh  run_docker_container.sh
frontend/: .htmlhintrc  Dockerfile  Gruntfile.cjs  Makefile  package-lock.json  package.json
githubAPIScripts/: PR_plus_Comment.sh
host_settings/: Makefile  create_django_superuser.sh  generate_nginx_configuration.sh  host_config.sh  install_project_host_config.sh  nginx.conf  remove_project.sh  replace_baseURL_front_js.sh  run_backend_docker_container.sh  run_frontend_docker_container.sh  settings.json
public/: pomodoro.html
scripts/: create_django_superuser.sh  generate_nginx_configuration.sh  remove_project.sh  run_backend_docker_container.sh  run_frontend_docker_container.sh  run_tlgbot_docker_container.sh
server/: pyproject.toml
server/pomodoro_server/authentication/: urls.py  views.py
server/pomodoro_server/authentication/static/css/: login.css
server/pomodoro_server/authentication/templates/: base_generic.html
server/pomodoro_server/authentication/templates/registration/: login.html  signin.html
server/pomodoro_server/pomo/: urls.py  views.py
server/pomodoro_server/pomodoro_server/: settings.py  urls.py  wsgi.py
src/: nginx.conf  nginx_server.conf
static/: helpers.js  pomodoro.js  styles.css  timer.js
telegram_bot/: Dockerfile  app.py  pyproject.toml
test/: dom_manipulated.test.cjs  (+1 more)
(+44 files in other folders)
