[tool.poetry]
name = "pomodoro-server"
version = "0.1.0"
description = "server side logic for pomodoro"
authors = ["la-strole <sovaleto48@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pomodoro_server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
cryptography = "^41.0.4"
django-cors-headers = "^4.3.0"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
werkzeug = "^3.0.1"
pyopenssl = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
