[tool.poetry]
name = "pomodoro-server"
version = "0.1.0"
description = "server side logic for pomodoro"
authors = ["la-strole <sovaleto48@gmail.com>"]
license = "MIT"
packages = [{include = "pomodoro_server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.15"
cryptography = "^42.0.4"
pydantic = "^2.6.1"

[tool.poetry.group.deploy]
optional=true

[tool.poetry.group.deploy.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
