[tool.poetry]
name = "pomodoro-server"
version = "0.1.0"
description = "server side logic for pomodoro"
authors = ["la-strole <sovaleto48@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pomodoro_server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
cryptography = "^41.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
