[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["la-strole <sovaleto48@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
